# shopify-backend

./: .gitignore  .replit  README.md  app.py  app.yaml  build.sh  docker-compose.yaml  models.py  package.json  pyproject.toml  requirements.txt  run.sh  setup.sh  sqlite-database.db
backend/: Dockerfile  app.py  data.db  main.py  models.py  sqlite-database.db
backend/app/: api.py  main.py  models.py  sqlite-database.db
backend/app/config/: api_config.py  db_config.py
backend/app/core/routers/: products.py  warehouses.py
frontend/: .babelrc  Dockerfile  package.json  webpack.config.js
frontend/.parcel-cache/: 0315d36a27db4833.txt  150628591a861f68  1745c949b9494679  23bb0671436e5f93  2c5717d05e1f2ea5.txt  33ea92a96b06453d.txt  35ccaaea78de3f6c  91e9ecc734e79eff  a65c4486eb04c3b4  a6c3924b0639ead9  c910b6c096609f22.txt  cd4860403412c10c  e32116cab0c52369  f8534f7235e31a5a  lock.mdb
frontend/public/: index.html
frontend/src/: App.css  App.js  ProductChangeContext.js  ProductContext.js  WarehouseChangeContext.js  WarehouseContext.js  index.js
frontend/src/components/: AddProduct.js  AddWarehouse.js  NavBar.js  ProductRows.js  ProductsTable.js  ReadProductTable.js  ReadTable.js  ReadWarehouseTable.js  UpdateModal.js  UpdateProduct.js  WarehouseRows.js
static/: script.js  style.css
testing/: Shopify Backend.postman_collection.json  shopify-backend.postman_environment.json
