[tool.poetry]
name = "shopify_backend"
version = "0.1.0"
description = "Backend test for shopify"
authors = ["Jared Connor <jaredconnor301@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
tortoise = "^0.1.1"
pydantic = "^1.9.1"
tortoise-orm = "^0.19.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
